--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@progress/kendo-licensing": "^1.7.1",
     "@progress/kendo-react-all": "^12.0.1",
     "@progress/kendo-react-buttons": "^12.0.1",
+    "@progress/kendo-react-charts": "^12.0.1",
     "@progress/kendo-react-common": "^12.0.1",
     "@progress/kendo-react-dateinputs": "^12.0.1",
     "@progress/kendo-react-dialogs": "^12.0.1",
