--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@progress/kendo-react-notification": "^12.0.1",
     "@progress/kendo-react-progressbars": "^12.0.1",
     "@progress/kendo-theme-default": "^12.0.1",
+    "@vercel/analytics": "^1.5.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-router-dom": "^7.9.1"
